moved default test profile to the gradle task definition;